fixed the admin spacing issue (somebuuuuddddy left a "," at the end of a class name…
fixes #358

--- a/css/admin.css
+++ b/css/admin.css
@@ -50,7 +50,7 @@ img.social_option {
 	margin: 15px 0 10px;
 }
 
-#standard-options #standard-info, {
+#standard-options #standard-info {
 	float: left;
 	width: 65%;
 	margin-right: 10px;
